new file:   server/flaskApp/__init__.pyc 	modified:   server/flaskApp/__pycache__/models.cpython-37.pyc 	modified:   server/flaskApp/__pycache__/routes.cpython-37.pyc 	modified:   server/flaskApp/models.py 	modified:   server/flaskApp/routes.py 	modified:   server/flaskApp/site.db 	new file:   server/flaskApp/templates/crawl_settings.html 	new file:   server/flaskApp/templates/dirsearch.html 	modified:   server/flaskApp/templates/layout.html 	modified:   server/flaskApp/templates/report.html

--- a/server/flaskApp/templates/layout.html
+++ b/server/flaskApp/templates/layout.html
@@ -105,6 +105,8 @@
 						{% if current_user.is_authenticated %}
 						<li><a href="{{ url_for('home') }}">Scans</a></li>
 						<li><a class="nav-item nav-link" href="{{ url_for('report') }}">Reports</a></li>
+						<li><a class="nav-item nav-link" href="{{ url_for('crawl_settings') }}">Crawl Settings</a></li>
+						<li><a class="nav-item nav-link" href="{{ url_for('dirsearch') }}">Dirsearch</a></li>
 						<li><a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a></li>
 						<li><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></li>
 						{% else %}
